# Edea

./: CMakeLists.txt  Edea.cpp  LICENSE  README.md
Basic/: Configuration.hpp
Example/Basic/: Configuration.cpp  Types.cpp
docs/: CMakeLists.txt
examples/Basic/: CMakeLists.txt  Configuration.cpp  Types.cpp
include/Basic/: Configuration.hpp  NoDefault.hpp  OS.hpp  Types.hpp
